# Cipher-Shield

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  env.template  openapi.json
backend/migrations/: 002_stream_rules.sql  003_blueprints.sql  005_stream_camera_fields.sql  006_drop_blueprint_cameras.sql  007_stream_blueprint_id.sql  008_event_title_frame_status.sql  009_triggered_rule.sql  010_global_alert_phone.sql
backend/src/: assistant.rs  main.rs  state.rs
backend/src/analysis/: worker.rs
backend/src/analysis/vlm/: mod.rs  ollama.rs  openai_compat.rs
backend/src/api/: mod.rs  openapi.rs  routes.rs  ws.rs
backend/src/notifications/: twilio.rs
backend/src/storage/: db.rs  models.rs
backend/src/streams/: ffmpeg.rs  frame_store.rs  manager.rs  mod.rs  snapshot.rs  source.rs
frontend/: index.html
frontend/vite-app/: components.json  package-lock.json  package.json
frontend/vite-app/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
frontend/vite-app/src/components/: active-rules-card.tsx  add-camera-dialog.tsx  add-phone-number-dialog.tsx  add-rule-dialog.tsx  calendars.tsx  camera-node.tsx  date-picker.tsx  dynamic-island.tsx  feature-section.tsx  footer.tsx  grid-loader.tsx  header.tsx  hero.tsx  image-node.tsx  integrations.tsx  logo.tsx  logos-section.tsx  mobile-nav.tsx  nav-blueprint.tsx  nav-camera.tsx  nav-favorites.tsx  nav-prompts.tsx  nav-user.tsx  (+12 more)
migrations/: 001_initial.sql
src/: config.rs  error.rs  main.rs
src/analysis/: mod.rs  worker.rs
src/api/: mod.rs
src/streams/: ffmpeg.rs  mod.rs  snapshot.rs  source.rs
(+12 files in other folders)
